# agent-mesh

./: .bandit  .gitignore  Makefile  foundry.yaml  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.github/workflows/: deploy.yml
agent_mesh/: agent.py  catalog.py  dispatcher.py  health_monitor.py  main.py  models.py  observability.py  registry.py  remote.py  router_agent.py  synthesizer.py  tools.py
agent_mesh/specialists/: __init__.py  code_review.py  code_review_deploy.py  security_review.py  security_review_deploy.py  summarizer.py  web_search.py
docs/brainstorms/: 2026-06-22-a2a-agent-mesh-brainstorm.md
docs/ops/: iam-setup.md
docs/plans/: 2026-06-23-feat-a2a-remote-agent-mesh-plan.md
docs/superpowers/plans/: 2026-06-17-terraform-module.md
docs/superpowers/specs/: 2026-06-17-terraform-module-design.md
installation_scripts/: install_gh.sh
tests/: conftest.py  test_catalog.py  test_dispatcher.py  test_health_monitor.py  test_integration.py  test_registry.py  test_remote.py  test_router_agent.py  test_security_review.py
