[project]
name = "agent-mesh"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=1.25.0",
    "google-genai",
    "pydantic>=2.0",
    "aiosqlite",
    "sqlalchemy[asyncio]",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "openinference-instrumentation-google-adk",
    "google-api-python-client>=2.197.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_mesh*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.ruff.lint]
ignore = ["F811"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "cloudpickle",
]
deploy = [
    "google-cloud-aiplatform[reasoningengine,adk]>=1.93.0",
    "cloudpickle",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "cloudpickle",
]
